# QOczko

./: CMakeLists.txt  LICENSE  QOczko.kdev4  README.md
.kdev4/: QOczko.kdev4
src/: main.cpp  opencvconnector.cpp  opencvconnector.h  qoczkoalgorithm.cpp  qoczkoalgorithm.h
src/mcv/: backproject.cpp  backproject.h  camshift.cpp  camshift.h  canny.cpp  canny.h  equalizehist.cpp  equalizehist.h  gaussianblur.cpp  gaussianblur.h  gray.cpp  gray.h  histogram.cpp  histogram.h  matchshapes.cpp  matchshapes.h  pointtracker.cpp  pointtracker.h  videograbber.cpp  videograbber.h
src/ui/: HotPointView.cpp  HotPointView.h  OpenView.cpp  OpenView.h  ParametrizedView.cpp  ParametrizedView.h  PatternsView.cpp  PatternsView.h  QOczko.cpp  QOczko.h  QOczko.ui  ShapeView.cpp  ShapeView.h  ui_QOczko.h
